arrow-inject-compiler-plugin/src/testData/diagnostics/context-receivers/resolution_prohibited_published_internal_orphan.kt
package foo.bar

import arrow.inject.annotations.context
import arrow.inject.annotations.ContextResolution
import arrow.inject.annotations.Contextual
import kotlin.PublishedApi

<!PUBLISHED_INTERNAL_ORPHAN!>@Contextual @PublishedApi internal fun n(): Int = 0<!>

context(Int)
@ContextResolution
fun main() {

}
